--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,7 @@
 
 $grey: #24292E;
 $light-grey: #3F4347;
+$blue: #00ACEA;
 
 /********** General **********/
 
@@ -12,7 +13,16 @@ $light-grey: #3F4347;
 body {
   background-color: $grey;
   color: white;
-  font-family: "Work Sans", sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+}
+
+.content {
+  padding-top: 60px;
+}
+
+h1, h2 {
+  margin: 0; /* reset default margin */
 }
 
 /********** Header **********/
@@ -20,12 +30,12 @@ body {
 .header {
   background-color: $light-grey;
   width: 100%;
-  //height: 40px;
   position: fixed;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  display: flex;
+  border-bottom: 3px solid $grey;
 
   img {
     width: 50px;
@@ -44,8 +54,35 @@ body {
     padding: 0;
     margin: 0;
     li {
-      padding-left: 22px;
+      padding-left: 25px;
       float: right;
     }
+  }
+}
+
+/********** Riddle **********/
+
+.riddle {
+  //padding: 30px;
+  margin-top: 20px;
+  background-color: $light-grey;
+  line-height: 1.4;
+
+  h2 {
+    padding: 30px 30px 0 30px;
+    font-size: 16px;
+    font-weight: 300;
+    .username {
+      font-weight: 800;
+      color: $blue;
+    }
+  }
+  p {
+    padding: 30px;
+    margin: 0;
+  }
+  .answer {
+    padding: 20px 30px;
+    border-top: 1px solid $grey;
   }
 }
