Add extension to logo.png

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <%= image_tag("logo") %>
+  <%= image_tag("logo.png") %>
   <h1>Riddles</h1>
   <ul class="nav">
     <li>Sign up</li>
