--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,8 +1,15 @@
 /********** Variables **********/
 
+//Colors
 $grey: #24292E;
 $light-grey: #3F4347;
+$lighter-grey: #8a8a8a;
 $blue: #00ACEA;
+//Font-weight
+$normal: 400;
+$light: 300;
+$bold: 800;
+
 
 /********** General **********/
 
@@ -19,10 +26,13 @@ body {
 
 .content {
   padding-top: 60px;
+  max-width: 720px;
+  margin: 0 auto;
 }
 
 h1, h2 {
   margin: 0; /* reset default margin */
+  font-weight: $normal;
 }
 
 /********** Header **********/
@@ -42,7 +52,7 @@ h1, h2 {
   }
 
   h1 {
-    font-weight: 400;
+    font-weight: $normal;
     letter-spacing: -0.1em;
     margin: 0;
     display: none; /* on mobile devices */
@@ -63,7 +73,6 @@ h1, h2 {
 /********** Riddle **********/
 
 .riddle {
-  //padding: 30px;
   margin-top: 20px;
   background-color: $light-grey;
   line-height: 1.4;
@@ -71,9 +80,9 @@ h1, h2 {
   h2 {
     padding: 30px 30px 0 30px;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: $light;
     .username {
-      font-weight: 800;
+      font-weight: $bold;
       color: $blue;
     }
   }
@@ -84,5 +93,40 @@ h1, h2 {
   .answer {
     padding: 20px 30px;
     border-top: 1px solid $grey;
+  }
+}
+
+/********** Forms **********/
+
+form {
+  padding: 0 20px;
+  h1 {
+    text-align: center;
+    font-weight: $normal;
+    font-size: 24px;
+    padding: 30px;
+  }
+
+  input {
+    display: block;
+    width: 100%;
+    background-color: $light-grey;
+    border: none;
+    color: white;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    padding: 18px 20px;
+    outline: 0;
+    outline-offset: 0;
+  }
+
+  input[type="submit"] {
+    background-color: $blue;
+    color: white;
+    margin-top: 30px;
+    transition: background-color 0.1s;
+    &:hover {
+      background-color: black;
+    }
   }
 }
