--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -35,6 +35,11 @@ h1, h2 {
   font-weight: $normal;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
 /********** Header **********/
 
 .header {
@@ -141,4 +146,8 @@ form {
 .alert-success {
   background-color: #278664;
   text-align: center;
+}
+
+.alert-errors {
+  background-color: #732323;
 }
