--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,8 @@
       <% end %>
       <%= yield %>
     </div>
+    <div class="footer">
+      <%= link_to image_tag("github_logo.png", alt: "GitHub"), "https://github.com/anikeef/riddles" %>
+    </div>
   </body>
 </html>
