--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <%= yield %>
     </div>
     <div class="footer">
-      <%= link_to image_tag("github_logo.png", alt: "GitHub"), "https://github.com/anikeef/riddles" %>
+      See on <%= link_to image_tag("github_logo_white.png", alt: "GitHub"), "https://github.com/anikeef/riddles" %>
     </div>
   </body>
 </html>
