Create users index page

--- a/app/views/riddles/_riddle.html.erb
+++ b/app/views/riddles/_riddle.html.erb
@@ -1,4 +1,4 @@
-<div class="riddle">
+<div class="box">
   <h2><span class="username"><%= riddle.user.name %></span> asked <%= time_ago_in_words(riddle.updated_at) %> ago</h2>
   <p>
     <%= riddle.body %>
