--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -82,15 +82,15 @@ a {
   }
 }
 
-/********** Riddle **********/
+/********** Box (riddle and user) **********/
 
-.riddle {
+.box {
   margin-top: 20px;
   background-color: $light-grey;
   line-height: 1.4;
 
   h2 {
-    padding: 30px 30px 0 30px;
+    padding: 30px;
     font-size: 16px;
     font-weight: $light;
     .username {
@@ -99,7 +99,7 @@ a {
     }
   }
   p {
-    padding: 30px;
+    padding: 0 30px 20px 30px;
     margin: 0;
   }
   .answer {
@@ -169,5 +169,17 @@ form {
   img {
     width: 60px;
 
+  }
+}
+
+/********** Media queries **********/
+
+@media (min-width: 720px) {
+  .box {
+    border-radius: 6px;
+    p, .answer, h2 {
+      padding-left: 70px;
+      padding-right: 70px;
+    }
   }
 }
