--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <%= link_to image_tag("logo.png"), root_path %>
   <h1>Riddles</h1>
   <ul class="nav">
-    <li><%= link_to "Sign up", new_user_path %></li>
     <li>Log in</li>
+    <li><%= link_to "Sign up", signup_path %></li>
   </ul>
 </div>
