--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -107,6 +107,10 @@ a {
     padding: 20px 30px;
     border-top: 1px solid $grey;
   }
+  .hidden_answer {
+    text-align: center;
+    font-weight: $light;
+  }
 }
 
 /********** Forms **********/
