--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -65,10 +65,11 @@ a {
 
   h1 {
     font-weight: $normal;
-    letter-spacing: -0.1em;
+    letter-spacing: -0.04em;
     margin: 0;
+    font-size: 28px;
+    padding-left: 8px;
     display: none; /* on mobile devices */
-    background-color: white;
   }
 
   .nav {
@@ -184,6 +185,10 @@ form {
     padding: 20px 100px;
     img {
       width: 40px;
+    }
+
+    h1 {
+      display: inline-block;
     }
 
     .nav li {
