Create basic machinery for creating riddles

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -125,7 +125,7 @@ form {
     padding: 30px;
   }
 
-  input {
+  input, textarea {
     display: block;
     width: 100%;
     background-color: $light-grey;
