Credit the author of the logo with mouseover text

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="logo">
     <%= link_to root_path do %>
-      <%= image_tag("logo.png") %>
+      <%= image_tag("logo.png", title: "Icon made by Kiranshastry from www.flaticon.com ") %>
       <h1>Riddles</h1>
     <% end %>
   </div>
