--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Riddles</title>
+    <title>Problems</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width">
     <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,800" rel="stylesheet"> -->
