--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
   <ul class="nav">
     <% if logged_in? %>
       <li><%= link_to "Log out", logout_path, method: :delete %></li>
-      <li><%= link_to "New problem", new_riddle_path %></li>
+      <li><%= link_to "New problem", new_problem_path %></li>
     <% else %>
       <li><%= link_to "Sign up", signup_path %></li>
       <li><%= link_to "Log in", login_path %></li>
