--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -1,15 +1,15 @@
 <div class="box">
   <h2>
     <span class="username">
-      <%= logged_in? ? riddle.user.name : "Anonymous" %>
-    </span> asked <%= time_ago_in_words(riddle.updated_at) %> ago
+      <%= logged_in? ? problem.user.name : "Anonymous" %>
+    </span> asked <%= time_ago_in_words(problem.updated_at) %> ago
   </h2>
   <p>
-    <%= riddle.body %>
+    <%= problem.body %>
   </p>
   <div class="answer">
     <% if logged_in? %>
-      <b>Answer:</b> <%= riddle.answer %>
+      <b>Answer:</b> <%= problem.answer %>
     <% else %>
       <div class="hidden_answer">
         Log in to see the answer and the author
