--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -1,7 +1,7 @@
 <div class="box">
   <h2>
     <span class="username">
-      <%= logged_in? ? problem.user.name : "Anonymous" %>
+      <%= logged_in? ? link_to(problem.user.name, user_path(problem.user)) : "Anonymous" %>
     </span> asked <%= time_ago_in_words(problem.updated_at) %> ago
   </h2>
   <p>
