--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,6 @@
   <%= f.email_field :email, placeholder: "Email" %>
   <%= f.password_field :password, placeholder: "Password" %>
   <%= f.password_field :password_confirmation, placeholder: "Password confirmation" %>
+  <%= f.file_field :avatar, accept: "image/jpeg, image/gif, image/png" %>
   <%= f.submit "Create account" %>
 <% end %>
