--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,11 +47,27 @@ a {
   text-decoration: none;
 }
 
+.avatar {
+  border-radius: 100px;
+  border: 3px solid $blue;
+}
+
 .main_header {
   font-size: 20px;
   font-weight: $light;
-  padding: 20px 0;
+  margin: 20px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  .avatar {
+    width: 45px;
+    height: 45px;
+    margin-right: 15px;
+    border-color: $light-grey;
+  }
+  .username {
+    padding-right: 5px;
+  }
 }
 
 .username, .username > a {
@@ -193,9 +209,13 @@ form {
 
 @media (min-width: 720px) {
   .main_header {
-    padding: 30px 0 20px;
+    margin: 30px 0;
     font-size: 24px;
     text-align: left;
+    .avatar {
+      width: 55px;
+      height: 55px;
+    }
   }
 
   .header {
