--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,3 @@
 <div class="box">
-  <h2><span class="username"><%= user.name %></span> registered <%= time_ago_in_words(user.updated_at) %> ago</h2>
+  <h2><span class="username"><%= link_to user.name, user %></span> registered <%= time_ago_in_words(user.updated_at) %> ago</h2>
 </div>
