--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,6 @@
-<h1 class="main_header"><span class="username"><%= @user.name %></span> problems</h1>
+<h1 class="main_header">
+  <%= image_tag(@user.avatar, class: "avatar") if @user.avatar? %>
+  <span class="username"><%= @user.name %></span> problems
+</h1>
 
-<% @user.problems.each do |problem| %>
-  <div class="box">
-    <h2>
-      Asked <%= time_ago_in_words(problem.updated_at) %> ago
-    </h2>
-    <p>
-      <%= problem.body %>
-    </p>
-
-    <div class="answer" onclick="this.innerHTML = '<b>Answer: </b><%= problem.answer %>'">
-      <div class="hidden_answer">
-        Click here to see the answer
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render @user.problems %>
