--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="main_header">
+<h1 class="user_header">
   <%= image_tag(@user.avatar, class: "avatar") if @user.avatar? %>
   <span class="username"><%= @user.name %></span> problems
 </h1>
