--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -49,10 +49,10 @@ a {
 
 .avatar {
   border-radius: 100px;
-  border: 3px solid $blue;
+  border: 2px solid $blue;
 }
 
-.main_header {
+.user_header {
   font-size: 20px;
   font-weight: $light;
   margin: 20px;
@@ -119,10 +119,25 @@ a {
   background-color: $light-grey;
   line-height: 1.4;
 
-  h2 {
-    padding: 30px;
-    font-size: 16px;
-    font-weight: $light;
+  header {
+    padding: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    .avatar {
+      width: 40px;
+      height: 40px;
+      margin-right: 15px;
+    }
+
+    .avatar-link {
+      line-height: 0.1;
+    }
+
+    h2 {
+      font-size: 16px;
+      font-weight: $light;
+    }
   }
 
   p {
@@ -208,7 +223,7 @@ form {
 /********** Media queries **********/
 
 @media (min-width: 720px) {
-  .main_header {
+  .user_header {
     margin: 30px 0;
     font-size: 24px;
     text-align: left;
@@ -240,7 +255,7 @@ form {
   .box {
     border-radius: 6px;
     margin-top: 20px;
-    p, .answer, h2 {
+    p, .answer, header {
       padding-left: 70px;
       padding-right: 70px;
     }
