--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -3,5 +3,6 @@
   <h1>New problem</h1>
   <%= f.text_area :body, placeholder: "Body", rows: 10 %>
   <%= f.text_field :answer, placeholder: "Answer" %>
+  <%= f.file_field :picture, accept: "image/jpeg, image/gif, image/png" %>
   <%= f.submit "Create problem" %>
 <% end %>
