--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -138,6 +138,17 @@ a {
       font-size: 16px;
       font-weight: $light;
     }
+
+    .manage-links {
+      list-style-type: none;
+      margin: 0;
+      padding: 0 0 0 10px;
+      font-weight: $light;
+      margin-left: auto;
+      a {
+        color: $blue;
+      }
+    }
   }
 
   p {
