Add "Answer is missing" message

--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -38,6 +38,10 @@
           Click here to see the answer
         </div>
       </div>
+    <% else %>
+      <div class="restricted_answer">
+        Answer is missing
+      </div>
     <% end %>
   <% else %>
     <div class="restricted_answer">
