Add black border to main header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -86,7 +86,7 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  border-bottom: 3px solid $grey;
+  border-bottom: 1px solid black;
 
   img {
     width: 50px;
